# anki_card_maker

./: MIGRATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  anki_tui.py  chirp.py  config.example.json  core.py  deck.apkg  gemini.py  pyproject.toml  requirements.txt  run.py  tts.py  words.example.txt  words.txt
