[project]
name = "files"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-cloud-texttospeech>=2.34.0",
    "google-genai>=1.64.0",
    "google-generativeai>=0.8.6",
    "py-ankiconnect>=1.1.4",
    "textual>=8.0.0",
]
